# mtconnect-adapter

./: .dockerignore  .gitmodules  386.Dockerfile  CMakeLists.txt  Dockerfile  README.md  agent.cfg  build.sh  debug.Dockerfile  docker-compose.yml  entrypoint.sh  fanuc.xml  healthcheck.sh  read.py  run.sh
docker/: Dockerfile  arm.Dockerfile  x64.Dockerfile  x86.Dockerfile
docker/adapter/: Dockerfile
docker/agent/: Dockerfile
fanuc/: CMakeLists.txt  adapter.ini  adapter.ini.template  default.ini  fanuc_adapter.cpp  fanuc_path.cpp
fanuc/fwlib32/0i/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/0iB/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/0iD/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/150/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/15i/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/160/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/16W/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/30i/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/PM/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/PMi/: Fwlib32.bas  Fwlib32.h
fanuc/fwlib32/e1/: Fwlib32.bas  Fwlib32.h
minIni_07/: CMakeLists.txt
scripts/: entrypoint.sh  install-deps.sh  install-fwlib32.sh
src/: CMakeLists.txt  server.cpp
